Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105709

Dragging large windows is slow on WASM

    XMLWordPrintable

Details

    • WebAssembly
    • 2a23652bbb (qt/qtbase/dev) bf94566694 (qt/qtbase/6.4) bf94566694 (qt/tqtc-qtbase/6.4) 2a23652bbb (qt/tqtc-qtbase/dev)

    Description

      When a large window is dragged, the operation is sluggish.

      I've profiled the compositor's frame() method and it is clear that the format conversion for the non-client area image is taking a lot of time (qopengltexture.cpp:3643, image.convertToFormat)

      This is radically sped up if the image already has the requested format.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mikolaj.boc Mikołaj Boc (Inactive)
            mikolaj.boc Mikołaj Boc (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes