Avoid image format conversion when drawing window nonclient area

This radically speeds up window resizing and dragging.

Fixes: QTBUG-105709
Change-Id: I844601a5b139d21024db0c373482af18f350d0eb
Reviewed-by: Lorn Potter <lorn.potter@gmail.com>
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 2a23652bbbba8def270b78d76c91a5a96d391106)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>